# python-usernames

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
src/python_usernames/: __about__.py  __init__.py  reserved_words.py  validators.py  words.txt
tests/: test_usernames.py  test_validators.py
usernames/: __init__.py  reserved_words.py  validators.py
